--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>Firebase Relay Control Dashboard</title>
+  <title>Alwyn's Homeautomation Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
@@ -22,7 +22,8 @@
     }
     .relay-card {
       display: inline-block;
-      background-color: white;
+      background-color: #222; /* Dark gray instead of pure black */
+      color: white; /* White text for better contrast */
       padding: 20px;
       margin: 15px;
       border-radius: 15px;
@@ -33,6 +34,7 @@
     .relay-card h2 {
       margin-bottom: 10px;
       font-size: 1.3rem;
+      color: #fff;
     }
     .relay-card p {
       margin-bottom: 10px;
@@ -43,14 +45,15 @@
       border: none;
       border-radius: 10px;
       color: white;
-      background-color: blue;
+      background-color: #1e88e5;
       cursor: pointer;
       font-size: 16px;
       width: 90%;
-      transition: opacity 0.3s ease;
+      transition: all 0.3s ease;
     }
     .relay-card button:hover {
-      opacity: 0.8;
+      opacity: 0.9;
+      transform: translateY(-2px);
     }
     #allOffBtn, #logoutBtn {
       max-width: 300px;
@@ -63,19 +66,21 @@
       margin: 15px auto;
       display: block;
       color: white;
-      transition: opacity 0.3s ease;
+      transition: all 0.3s ease;
     }
     #allOffBtn {
       background-color: #d32f2f;
     }
     #allOffBtn:hover {
-      opacity: 0.8;
+      opacity: 0.9;
+      transform: translateY(-2px);
     }
     #logoutBtn {
       background-color: #555;
     }
     #logoutBtn:hover {
-      opacity: 0.8;
+      opacity: 0.9;
+      transform: translateY(-2px);
     }
 
     #dashboard {
@@ -140,16 +145,31 @@
       padding: 10px 0;
       margin-top: 40px;
     }
+    .loader {
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid #3498db;
+      border-radius: 50%;
+      width: 30px;
+      height: 30px;
+      animation: spin 1s linear infinite;
+      margin: 10px auto;
+      display: none;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   </style>
 </head>
 <body>
 
-  <h1>Firebase Relay Control Dashboard</h1>
+  <h1>Alwyn's Home Automation Dashboard</h1>
 
   <!-- Login form -->
   <div id="loginForm">
     <input type="email" id="email" placeholder="Enter Email" required />
     <input type="password" id="password" placeholder="Enter Password" required />
+    <div class="loader" id="loginLoader"></div>
     <button id="loginBtn">Login</button>
   </div>
 
@@ -186,33 +206,40 @@
   </div>
 
   <footer>
-    Created by Tech StudyCell
+    Created by Alwyn
   </footer>
 
   <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 
   <script>
     // Firebase config
     const firebaseConfig = {
-          apiKey: "AIzaSyBbDIZmzTR8cf-i1bMFS5hImu7FRIUXHhw",
-          authDomain: "home-automation-ede39.firebaseapp.com",
-          databaseURL: "https://home-automation-ede39-default-rtdb.firebaseio.com",
-          projectId: "home-automation-ede39",
-          storageBucket: "home-automation-ede39.firebasestorage.app",
-          messagingSenderId: "738273916710",
-          appId: "1:738273916710:web:e12e9743d1f85feefe33e7",
-          measurementId: "G-ZL21HWM27H"
-        };
+      apiKey: "AIzaSyBbDIZmzTR8cf-i1bMFS5hImu7FRIUXHhw",
+      authDomain: "home-automation-ede39.firebaseapp.com",
+      databaseURL: "https://home-automation-ede39-default-rtdb.firebaseio.com",
+      projectId: "home-automation-ede39",
+      storageBucket: "home-automation-ede39.appspot.com",
+      messagingSenderId: "738273916710",
+      appId: "1:738273916710:web:e12e9743d1f85feefe33e7",
+      measurementId: "G-ZL21HWM27H"
+    };
 
-
-    firebase.initializeApp(firebaseConfig);
+    try {
+      // Initialize Firebase
+      const app = firebase.initializeApp(firebaseConfig);
+      console.log("Firebase initialized successfully");
+    } catch (error) {
+      console.error("Firebase initialization error:", error);
+      alert("Failed to initialize the app. Please try again later.");
+    }
 
     const loginForm = document.getElementById("loginForm");
     const dashboard = document.getElementById("dashboard");
     const loginBtn = document.getElementById("loginBtn");
+    const loginLoader = document.getElementById("loginLoader");
 
     loginBtn.addEventListener("click", () => {
       const email = document.getElementById("email").value.trim();
@@ -223,6 +250,10 @@
         return;
       }
 
+      // Show loading state
+      loginBtn.style.display = "none";
+      loginLoader.style.display = "block";
+
       firebase.auth().signInWithEmailAndPassword(email, password)
         .then(userCredential => {
           console.log("Signed in as", userCredential.user.email);
@@ -231,7 +262,12 @@
           startRelayControl();
         })
         .catch(error => {
+          console.error("Login error:", error);
           alert("Login failed: " + error.message);
+        })
+        .finally(() => {
+          loginBtn.style.display = "block";
+          loginLoader.style.display = "none";
         });
     });
 
@@ -253,20 +289,26 @@
         relayRef.on("value", (snapshot) => {
           const state = snapshot.val();
           statusText.innerText = state ? "ON" : "OFF";
-          toggleButton.style.backgroundColor = state ? "green" : "blue";
+          toggleButton.textContent = state ? "Turn OFF" : "Turn ON";
+          toggleButton.style.backgroundColor = state ? "#4CAF50" : "#1e88e5";
         });
 
         toggleButton.onclick = () => {
           relayRef.get().then(snap => {
             relayRef.set(!snap.val());
+          }).catch(error => {
+            console.error("Toggle error:", error);
+            alert("Failed to toggle relay: " + error.message);
           });
         };
       });
 
       document.getElementById("allOffBtn").onclick = () => {
-        relays.forEach(relay => {
-          db.ref("/" + relay.path).set(false);
-        });
+        if (confirm("Are you sure you want to turn all relays OFF?")) {
+          relays.forEach(relay => {
+            db.ref("/" + relay.path).set(false);
+          });
+        }
       };
     }
 
@@ -279,9 +321,20 @@
           document.getElementById("password").value = "";
         })
         .catch(error => {
+          console.error("Logout error:", error);
           alert("Logout failed: " + error.message);
         });
     };
+
+    // Check auth state on page load
+    firebase.auth().onAuthStateChanged(user => {
+      if (user) {
+        console.log("User already signed in:", user.email);
+        loginForm.style.display = "none";
+        dashboard.style.display = "block";
+        startRelayControl();
+      }
+    });
   </script>
 </body>
 </html>
