--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      background-color: #f9f9f9;
+      background-color: black; /* Changed to black */
       margin: 0;
       padding: 0 10px 40px;
       display: flex;
@@ -19,11 +19,12 @@
     h1 {
       margin-top: 30px;
       font-size: 1.8rem;
+      color: #eaf905; /* Yellow text for the title */
     }
     .relay-card {
       display: inline-block;
-      background-color: #222; /* Dark gray instead of pure black */
-      color: white; /* White text for better contrast */
+      background-color: #222;
+      color: white;
       padding: 20px;
       margin: 15px;
       border-radius: 15px;
@@ -34,11 +35,12 @@
     .relay-card h2 {
       margin-bottom: 10px;
       font-size: 1.3rem;
-      color: #fff;
+      color: #eaf905; /* Yellow text for relay titles */
     }
     .relay-card p {
       margin-bottom: 10px;
       font-size: 1rem;
+      color: white;
     }
     .relay-card button {
       padding: 10px 20px;
@@ -84,12 +86,12 @@
     }
 
     #dashboard {
-      display: none;
+      display: none; /* Hidden by default */
     }
     #loginForm {
       max-width: 400px;
       margin: 80px auto 20px;
-      background: white;
+      background: rgba(255, 255, 255, 0.1);
       padding: 30px 20px;
       border-radius: 15px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
@@ -165,7 +167,7 @@
 
   <h1>Alwyn's Home Automation Dashboard</h1>
 
-  <!-- Login form -->
+  <!-- Login form (visible by default) -->
   <div id="loginForm">
     <input type="email" id="email" placeholder="Enter Email" required />
     <input type="password" id="password" placeholder="Enter Password" required />
@@ -173,7 +175,7 @@
     <button id="loginBtn">Login</button>
   </div>
 
-  <!-- Dashboard -->
+  <!-- Dashboard (hidden until login) -->
   <div id="dashboard">
     <div class="relay-container">
       <div class="relay-card">
@@ -227,8 +229,8 @@
       measurementId: "G-ZL21HWM27H"
     };
 
+    // Initialize Firebase
     try {
-      // Initialize Firebase
       const app = firebase.initializeApp(firebaseConfig);
       console.log("Firebase initialized successfully");
     } catch (error) {
@@ -240,6 +242,19 @@
     const dashboard = document.getElementById("dashboard");
     const loginBtn = document.getElementById("loginBtn");
     const loginLoader = document.getElementById("loginLoader");
+
+    // Check auth state on page load
+    firebase.auth().onAuthStateChanged(user => {
+      if (user) {
+        console.log("User already signed in:", user.email);
+        loginForm.style.display = "none";
+        dashboard.style.display = "block";
+        startRelayControl();
+      } else {
+        loginForm.style.display = "block"; // Ensure login form is visible if not logged in
+        dashboard.style.display = "none";
+      }
+    });
 
     loginBtn.addEventListener("click", () => {
       const email = document.getElementById("email").value.trim();
@@ -325,16 +340,6 @@
           alert("Logout failed: " + error.message);
         });
     };
-
-    // Check auth state on page load
-    firebase.auth().onAuthStateChanged(user => {
-      if (user) {
-        console.log("User already signed in:", user.email);
-        loginForm.style.display = "none";
-        dashboard.style.display = "block";
-        startRelayControl();
-      }
-    });
   </script>
 </body>
 </html>
